--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,8 +1,100 @@
-*{
-    margin: 0;
-    padding: 0;
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css);
+
+body {
+  height: 100%;
+  /* background-color: #323948; */
+  /* background-color: #262f46; */
+  background-image: url("assets/map.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* overflow-y: auto; */
+  /* position: relative; */
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
 }
 
-body{
-    background-color: #171e2e;
+input[type="file"] {
+  display: none;
+}
+
+input[name="upload-btn"] {
+  display: none;
+}
+
+.nav-items {
+  display: inline-flex;
+  justify-content: space-between;
+  list-style: none;
+}
+
+.btn {
+  display: inline-block;
+  margin: 0.5rem 0.5rem 1rem 0.5rem;
+  clear: both;
+  font-family: inherit;
+  font-weight: 1000;
+  font-size: 20px;
+  text-decoration: none;
+  text-transform: initial;
+  border: none;
+  border-radius: 0.5em;
+  outline: none;
+  padding-top: 10px;
+  /* padding: 0 1rem; */
+  width: 20em;
+  height: 3em;
+  line-height: 36px;
+  color: black;
+  transition: all 0.2s ease-in-out;
+  box-sizing: border-box;
+  background: #00ffa4;
+  border-color: #00ffa4;
+  cursor: pointer;
+}
+
+#container-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#upload-box {
+  /* justify-content: center;
+    display: flex;
+    align-items: center; */
+  width: 48em;
+  height: 18em;
+  background-color: #171e2e;
+  margin-top: 5em;
+  border-radius: 1em;
+}
+
+#file-select {
+  cursor: pointer;
+}
+
+i {
+  padding-top: 70px;
+}
+
+#file-upload-btn {
+  margin-top: 3em;
+  /* padding: 20px; */
+  color: #171e2e;
+  /* background-color:  */
+}
+
+h1 {
+  color: white;
+  font-size: 40px;
+  font-weight: 900;
+}
+
+h3 {
+  margin-top: 2em;
+  color: #d9d9da;
+}
+
+.fa-download{
+  color:#00ffa4;
 }
