reading from html not working

--- a/client/public/HomePage.css
+++ b/client/public/HomePage.css
@@ -98,6 +98,7 @@ span{
 
 #features-container{
   background-color: #d9d9d9;
+  /* background-color:#141E30; */
   height: 100vh;
   text-align: center;
 }
