--- a/client/public/HomePage.css
+++ b/client/public/HomePage.css
@@ -115,6 +115,20 @@ h3{
 }
 
 
+#showcase{
+  background-color:#0d1320;
+  height: 100vh;
+}
+
+
+#tech-stack{
+  background-color: #d9d9d9;
+  height: 100vh;
+  border-top-left-radius: 2em;
+  border-top-right-radius: 2em;
+
+}
+
 #footer{
   background-color: #171e2e;
   height: 10vh;
