--- a/client/public/Register.css
+++ b/client/public/Register.css
@@ -1,10 +1,13 @@
 html, body {
     width: 100%;
     height: 100%;
-    background-color: #FCBF49;
+
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url("./assets/map.png");
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   #container {
