--- a/client/public/Login.css
+++ b/client/public/Login.css
@@ -50,23 +50,32 @@ body{
 #item-subheader{
     margin-bottom:1.5em;
 }
- 
+
+
 #email-ip{
-    padding: 0.9em;
+    padding: 1em;
     border-radius: 0.6em;
     border: none;
     width:27.5em;
     background-color: #313742;
-    
+    margin-bottom: 20px;
+    margin-top: 10px;   
 } 
+
+#pwd-label{
+    margin-bottom: 20px;
+}
 
 
 #password-ip{
-    padding: 0.9em;
+    padding: 1em;
     border-radius: 0.6em;
     border: none;
     width:27.5em;
     background-color: #313742;
+    margin-bottom: 20px;
+    margin-top: 8px;
+
 
 }
 
@@ -74,12 +83,19 @@ label{
     margin-bottom: 0.4em;
 }
 
+#fpwd{
+    cursor: pointer;
+}
+
 #login-button{
-    width:28em;
-    padding: 0.9em;
+    width:29em;
+    padding: 1em;
     border-radius: 0.6em;
     background-color: #00ffa4;
     border: none;
+    cursor: pointer;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 
