making ui changes

--- a/client/public/Dashboard.css
+++ b/client/public/Dashboard.css
@@ -4,27 +4,33 @@
     background-color: #313742;
 }
 
-#top-container{
-    display: flex;
-    flex-direction: row;
+
+#dashboard-container{
+    position: absolute;
+    margin-left:20em;
 }
 
 #side-nav-bar{
-    height: 100vh;
-    width: 15em;
-    /* margin-top: -10em; */
     background-color: #171e2e;
+    width: 20%;
+    height: 120vh;
+    position: fixed;
+    /* z-index: 999; */
+    margin-top: -6em;
 
 }
 
 #nav-items{
-    background-color: #d9d9d9;
-    width: 30em;
-    height: 10em;
-    z-index: 99;
+    color: #d9d9d9;
+    position: absolute;
+    margin-top: 10em;
+    background-color: #171e2e;
+    
+    
+
 }
 
-
+/* 
 
 #Introduction{
    margin-left: 5em;
@@ -41,14 +47,7 @@
     margin-top: 0.5em;
     margin-left: 9.5em;
 
-}
-/* 
-#tool-boxs{
-
-}
-
-#tool-box{
-    height: 5em;
-    width: 30em;
-    background-color: #171e2e;
 } */
+/* 
+
+
