--- a/client/public/Login.css
+++ b/client/public/Login.css
@@ -59,8 +59,12 @@ body{
     width:27.5em;
     background-color: #313742;
     margin-bottom: 20px;
-    margin-top: 10px;   
+    margin-top: 10px; 
+    color: #d9d9d9;
+  
 } 
+
+
 
 #pwd-label{
     margin-bottom: 20px;
@@ -75,6 +79,7 @@ body{
     background-color: #313742;
     margin-bottom: 20px;
     margin-top: 8px;
+    color: #d9d9d9;
 
 
 }
@@ -96,6 +101,7 @@ label{
     cursor: pointer;
     margin-top: 15px;
     margin-bottom: 15px;
+    font-weight: 700;
 }
 
 
